logica de duelo e elementos na tela

--- a/index.html
+++ b/index.html
@@ -18,11 +18,25 @@
       rel="stylesheet"
     />
 
+    <!-- favicon -->
+    <link
+      rel="shortcut icon"
+      href="./src/assets/favicon/Favicon.ico"
+      type="image/x-icon"
+    />
+
     <!-- main style -->
     <link rel="stylesheet" href="./src/styles/main.css" />
     <title>Yu-Gi-Oh Jo-ken-po Edition</title>
   </head>
   <body>
+    <audio id="bgm" loop>
+      <source
+        src="./src/assets/audios/transform_yugi_music.mp3"
+        type="audio/mp3"
+      />
+    </audio>
+
     <div class="bg-video">
       <video class="video" autoplay loop muted>
         <source src="./src/assets/video/yugi.mp4" type="video/mp4" />
@@ -35,11 +49,11 @@
           <span id="score_points">Win : 0 | Lose : 0</span>
         </div>
         <div class="menu_avatar">
-          <img src="card-image" alt="imagem-carta" />
+          <img id="card-image" alt="imagem-carta" />
         </div>
         <div class="card_details frame">
-          <p id="card-name">a</p>
-          <p id="card-type">a</p>
+          <p id="card-name">Selecione</p>
+          <p id="card-type">uma carta</p>
         </div>
       </div>
 
